--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,7 @@
     padding: 2px;
     background: linear-gradient(135deg, #2563eb, #7c3aed);
     -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     mask-composite: exclude;
   }
